--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,20 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-    color: #ffffff;
+    color: #eef4f6;
 }
 
 body{
     align-items: center;
     min-height: 100vh;
-    background-color: #212121;
-    display: flex;
-    justify-content: center;
+    background-image: url(/assets/p.png);
     background-size: cover;
-    background-position: 50%;
     background-origin:inherit;
     background-repeat: no-repeat;
+    display: flex;
+    padding-right: 200px;
+    justify-content: right;
+   
 }
 
 .container{
@@ -23,12 +24,12 @@ body{
 }
 
 .clock{
-    background-color: rgba(255 , 255, 255, 0.1);
-    height: 300px;
-    width: 300px;
+    background-color: rgba(10, 0, 0, 0.614);
+    height: 250px;
+    width: 250px;
     border-radius: 50%;
-    border: 2px solid rgba(255 , 255, 255, 0.25);
-    box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.9);
+    border: 2px solid rgba(255, 255, 255, 0.514);
+    box-shadow: 20px 15px 50px rgb(1, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,7 +48,7 @@ body{
 .clock::before{
     content: '';
     position: absolute;
-    background-color: #11aef7;
+    background-color: #e1e8eb;
     height: 8px;
     width: 8px;
     border-radius: 50%;
@@ -57,11 +58,12 @@ body{
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    z-index: 2;
 }
 .hand i{
     position: absolute;
     background-color: var(--clr);
-    height: 97px;
-    width: 5px;
+    height: var(--h);
+    width: var(--w);
     border-radius: 6px;
 }
